src/other/mico-2.3.12/test/idl/error/expected-stderr-case1.idl
case1.idl:13: identifier 'A' defined twice in this scope
